This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: mmap.mmap() passes the wrong variable to PySys_Audit()
Type: behavior Stage: resolved
Components: Extension Modules Versions: Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ZackerySpytz, steve.dower
Priority: normal Keywords: patch

Created on 2019-06-17 09:51 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 14152 merged ZackerySpytz, 2019-06-17 09:54
PR 14289 merged steve.dower, 2019-06-21 15:52
Messages (4)
msg345834 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2019-06-17 09:51
new_mmap_object() should pass the fd variable to PySys_Audit(), not fileno.

Also, there's a missing call to va_end() in PySys_Audit() itself.
msg346227 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2019-06-21 15:32
Thanks! Well spotted.
msg346228 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2019-06-21 15:32
New changeset 08286d52b29de604a4b187bf1f0d4209e39c926c by Steve Dower (Zackery Spytz) in branch 'master':
bpo-37316: mmap.mmap() passes the wrong variable to PySys_Audit() (GH-14152)
https://github.com/python/cpython/commit/08286d52b29de604a4b187bf1f0d4209e39c926c
msg346234 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2019-06-21 16:45
New changeset 6c7947713a40851e123493ca0fe8f2791d7ed2a6 by Steve Dower in branch '3.8':
bpo-37316: mmap.mmap() passes the wrong variable to PySys_Audit() (GH-14152)
https://github.com/python/cpython/commit/6c7947713a40851e123493ca0fe8f2791d7ed2a6
History
Date User Action Args
2022-04-11 14:59:16adminsetgithub: 81497
2019-06-21 16:48:58steve.dowersetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2019-06-21 16:45:16steve.dowersetmessages: + msg346234
2019-06-21 15:52:16steve.dowersetpull_requests: + pull_request14112
2019-06-21 15:32:24steve.dowersetmessages: + msg346228
2019-06-21 15:32:15steve.dowersetmessages: + msg346227
2019-06-21 15:10:50eric.snowsetnosy: + steve.dower
2019-06-17 09:54:46ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request13995
2019-06-17 09:51:19ZackerySpytzcreate